--- a/index.html
+++ b/index.html
@@ -101,26 +101,26 @@
 			</div> <!-- END LINE 2 -->
 			
 			<div class="icon-line"> <!-- LINE 3 -->
-				<div class="dLink"><button class="button" ondblclick="deployWindow('https://www5.cbox.ws/box/?boxid=918017&boxtag=DNtl2E', 'chat', 'attr://open-chat/void.io/')">
+				<div class="dLink"><button class="button" ondblclick="deployWindow('https://www5.cbox.ws/box/?boxid=931408&boxtag=Ag57qL', 'chat', 'attr://open-chat/void.io/')">
 					<div class="dIcon dIcon-Prog"></div>
 					Chat
 				</button></div>
 
-				<div class="dLink"><button class="button" ondblclick="window.open('http://pub49.bravenet.com/guestbook/4164040818/', '_blank')">
+				<div class="dLink"><button class="button" ondblclick="window.open('http:///', '_blank')">
 					<div class="dIcon dIcon-Guest">
 						<img src="images/oc-img/link.png" >
 					</div>
 					Guest
 				</button></div>
 				
-				<div class="dLink"><button class="button" ondblclick="deployWindow('mailto:nikhil', '_blank')">
+				<div class="dLink"><button class="button" ondblclick="deployWindow('mailto:econnikhil@protonmail.com', '_blank')">
 					<div class="dIcon dIcon-Mail">
 						<img src="images/oc-img/link.png" >
 					</div>
 					Mail
 				</button></div>
 				
-				<div class="dLink"><button class="button" ondblclick="deployWindow('https://discord.gg/GRXzQyX', '_blank')">
+				<div class="dLink"><button class="button" ondblclick="deployWindow('https://discord.gg/hfhgghgg', '_blank')">
 					<div class="dIcon dIcon-Disc">
 						<img src="images/oc-img/link.png" >
 					</div>
