--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,25 @@
 			<h5>
 				are you happy?
 			</h5>
+
 			
+			<br><br>
+		</div>
+		
+		<br><div class="divider"></div>
+		
+	  <div id="posts"></div>
+		
+		<div id="footer">
+			<span>
+				<a href="mailto:econnikhil@protonmail.com">निखिल</a>
+				<i>　©　2021</i>
+			</span>
+		</div>
+		
+		<div class="post-login-parent hide"><h4><br> You must be logged in to leave the message. <a href="https://n1kh1l.ml/#login" onclick="parent.deployWindow('login.html', 'login', '[new-home@web ~]$ /home/nikhil/login.sh')" title="" target="_top">Log In</a>?</h4></div>
+		<div class="post-restrict-parent hide"><h4><br> Comments are restricted for this post.</h4></div>
+					
 							
 	</body>
 </html>
