--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					Layer
 				</button></div>
 				
-				<div class="dLink"><button class="button" ondblclick="deployWindow('memes.html', 'meme' '[new-home@web ~]$ /home/निखिल/meme/')">
+				<div class="dLink"><button class="button" ondblclick="deployWindow('meme.html', 'meme', '[new-home@web ~]$ /home/निखिल/meme/')">
 					<div class="dIcon dIcon-Meme"></div>
 					Meme
 				</button></div>
