--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.4">
 		<link rel="icon" href="/images/logo.gif">
-		<title> [ 🆃🅷🅴 🅴🅽🅳 ] </title>
+		<title> [ login ] </title>
 		
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<style>
@@ -59,11 +59,6 @@
 			<h1 class="glowtext">
 				Who Are You?
 			</h1>
-			<br>
-			<h4>
-				あなたの名前で私たちは真実を知っています
-			</h4>
-			<br>
 			<hr>
 			<br>
 			<canvas id="eye" width="256" height="48" ></canvas>
