--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<title> [ Who am I ] </title>
+		<title> [ Who am I ?] </title>
 		<link rel="icon" href="/images/logo.gif">
 		<meta name="viewport" content="width=device-width, initial-scale=0.4">
 		<!--style>
@@ -18,11 +18,39 @@
 	</head>
 	
 	<body>
-		<br><br>
-		<div class="myimage"></div>
-		<img src="images/myself.png" style="width:500px"/>
-		<br>
-		<h1 class="glowtext">OK?</h1><br>
-		<br>
+
+		<div class="block">
+			
+			<hr><h3>Let me introduce myself properly... <br>
+			I love FOSS (Free and Open Source Software), I like music, and I like talking to other people.</h3><hr>
+			<hr><h3>I'm an explorer, I like to explore different minds(ets) and looking at things from the perspective of others.</h3><hr>
+			<hr><h3>I strive to be different, I've always wanted to be special, different from others, sticking out from the masses.</h3><hr>
+	
+		</div>		
+		<div class="divider"></div>
+
+			<div class="box">
+				<div class="toper">
+					<h2>So, what's next?</h2>
+				</div>
+				<div class="text">
+					<h3>I was thinking about my website and it seemed to be not that good as I wanted it to be.</h3>
+					<h3>Actually as much as I tried to make it dark and minimal'ish, I couldn't do it. It's not my now. I grew up a lot, since I started to develop this web-site, and now I realised that it's not what my heart wants to see.</h3>
+					<br>
+					<h3>I love lot of crazy stuff and also lots of dark memes and sysadmin stuff.<br>But now I understand that I'm not that stuff. I love it but it not defines me.</h3>
+					<h3>So it was a bit hard decision which I made. I will redisign my site to, what I think, will be best for me. But more importantly to my heart.</h3>
+					<h3>I will keep that dark story which I'm creating but it'll be not main content as it was to the present day.</h3>
+					<br>
+					<h3>Once again... Thank you all who leaved comments or loved my site. We will meet again, in the world with no sadness.</h3>
+					<br>
+					<h3><a href="index.html">Go back</a></h3>
+				</div>
+			</div>
+			
+			
+			<div id="scanlines"></div>
+			
+			<img id="backneko" src="images/notsome.gif">
+
 	</body>
 </html>
