mobile layou fix

--- a/layers/my-story.html
+++ b/layers/my-story.html
@@ -35,6 +35,20 @@
 			../
 		</button></div>
 		
+		<div class="dLink"><button class="button" ondblclick="window.location.href = 'mystory/nothing.html' + '?id=' + frameId">
+			<div class="dIcon dIcon-Txt"></div>
+			Nothing
+		</button></div>
+
+		<div class="dLink"><button class="button" ondblclick="window.location.href = 'mysto' + '?id=' + frameId">
+		</button></div>
+
+		<div class="dLink"><button class="button" ondblclick="window.location.href = 'mystory/other.html' + '?id=' + frameId">
+			<div class="dIcon dIcon-Txt"></div>
+			Others
+		</button></div>
+
+
 		<div class="dLink"><button class="button" ondblclick="window.location.href = 'mystory/me.html' + '?id=' + frameId">
 			<div class="dIcon dIcon-Txt"></div>
 			Me
