--- a/backs.html
+++ b/backs.html
@@ -18,7 +18,7 @@
 		</script>
 		
 		<style>
-			body {background-color: #111111;}
+			body {background-color: #edcbedaa; }
 			#pics {
 				display: flex;
   			flex-wrap: wrap;
@@ -69,9 +69,9 @@
 			<button onclick="cBack(3);" style="background-image: url(images/backgrounds/ocback3.png);">
 				<img src="images/backgrounds/setback.png">
 			</button>
-			<button onclick="cBack(4);" style="background-image: url(images/backgrounds/ocback4.png);">
+			<!--<button onclick="cBack(4);" style="background-image: url(images/backgrounds/ocback4.png);">
 				<img src="images/backgrounds/setback.png">
-			</button>
+			</button> -->
 			<button onclick="cBack(5);" style="background-image: url(images/backgrounds/ocback5.png);">
 				<img src="images/backgrounds/setback.png">
 			</button>
@@ -83,16 +83,16 @@
 			</button>
 			<button onclick="cBack(8);" style="background-image: url(images/backgrounds/ocback8.png);">
 				<img src="images/backgrounds/setback.png">
-			</button>
+			<!--</button>
 			<button onclick="cBack(9);" style="background-image: url(images/backgrounds/ocback9.png);">
 				<img src="images/backgrounds/setback.png">
-			</button>
+			</button> -->
 			<button onclick="cBack(10);" style="background-image: url(images/backgrounds/ocback10.png);">
 				<img src="images/backgrounds/setback.png">
 			</button>
-			<button onclick="cBack(11);" style="background-image: url(images/backgrounds/ocback11.png);">
+			<!--<button onclick="cBack(11);" style="background-image: url(images/backgrounds/ocback11.png);">
 				<img src="images/backgrounds/setback.png">
-			</button>
+			</button> -->
 			<button onclick="cBack(12);" style="background-image: url(images/backgrounds/ocback12.png);">
 				<img src="images/backgrounds/setback.png">
 			</button>
