--- a/layers/mystory/me.html
+++ b/layers/mystory/me.html
@@ -48,8 +48,8 @@
 		<h2>
 		  Some things should be told, some things are not.<br>
 		  How can I tell my story without referring my past or my present? I don't think there's a way to it. But somehow I'm here to tell you what is me and what is my feelings. <br>
-		  I'll be short in words but how can I do this if there's no words left to say from me. I'm downed, I'm depressed... again. And how should I do things with this mind? <br>
-		  The world is dying around me and I don't know what should I do to prevent this to happen. I lost lot of what I had before. I lost my mind. I lost sense of happiness... Or not? I'm happy but I'm not and it's the biggest confusion for me. Most of the day a happy face but in the night I'm drowning in my tears. There's no way to cope with it. There's no left behind. I need to bury my way back. I should left what I had before. I should go my way. If it's here or anywhere. <br>
+		  I'll be short in words but how can I do this if there's no words left to say from me. I'm downed... again. And how should I do things with this mind? <br>
+		  The world around me is so disturbing and I don't know what should I do to prevent this to happen. I lost lot of what I had before. I lost myself. I lost sense of happiness... Or not? I'm happy but I'm not and it's the biggest confusion for me. Most of the day a happy face but in the night I'm drowning in depth of sadness. There's no way to cope with it. There's no left behind. I need to bury my way back. I should left what I had before. I should go my way. If it's here or anywhere. <br>
 		  But also I should left behind what I loved. Can I? <br>
 		  Can<br>I?
 		</h2>
