mobile layout fix

--- a/mobile.html
+++ b/mobile.html
@@ -46,20 +46,21 @@
 
 	</head>
 	
-	<body>
+	<body> <br><br>
 		<div style="height:90%;width:90%;overflow:auto;border:8px solid rgba(117, 74, 74, 0.558);padding:2%">
 		<br><div id="infopath">H</div><br>
 
+		<a href="home.html"><img src="images/oc-img/l-about.png" />Home</a>
 		<a href="about.html"><img src="images/oc-img/l-about.png" />About</a>
-		<a href="blog.html"><img src="images/oc-img/l-blog.png" />Blog</a>
+		<!-- <a href="blog.html"><img src="images/oc-img/l-blog.png" />Blog</a> -->
 		<a href="login.html"><img src="images/oc-img/l-login.png" />Login</a>
-		<a href="https://www5.cbox.ws/box/?boxid=918017&boxtag=DNtl2E"><img src="images/oc-img/l-prog.png" />Chat</a>
-		<a href="http://pub49.bravenet.com/guestbook/4164040818/"><img src="images/oc-img/l-guest.png" />Guest</a>
-		<a href="mailto:"><img src="images/oc-img/l-mail.png" />Mail</a>
-		<a href="https://discord.gg/GRXzQyX"><img src="images/oc-img/l-discor.png" />Talk</a>
+		<a href="https://www5.cbox.ws/box/?boxid=931408&boxtag=Ag57qL"><img src="images/oc-img/l-prog.png" />Chat</a>
+		<!-- <a href="http://pub49.bravenet.com/guestbook/4164040818/"><img src="images/oc-img/l-guest.png" />Guest</a> -->
+		<a href="mailto:econnikhil@protonmail.com"><img src="images/oc-img/l-mail.png" />Mail</a>
+		<!-- <a href="https://discord.gg/GRXzQyX"><img src="images/oc-img/l-discor.png" />Talk</a> -->
 
 		<a href="layer.html"><img src="images/oc-img/l-layers.png" />Layer</a>
-		<a href="knowledge.html"><img src="images/oc-img/l-know.png" />Know</a>
+		<!-- <a href="knowledge.html"><img src="images/oc-img/l-know.png" />Know</a> -->
 		</div>
 	</body>
 </html>
