mobile layout fix

--- a/mobile.html
+++ b/mobile.html
@@ -47,8 +47,8 @@
 	</head>
 	
 	<body> <br><br>
-		<div style="height:90%;width:90%;overflow:auto;border:8px solid rgba(117, 74, 74, 0.558);padding:2%">
-		<br><div id="infopath">H</div><br>
+		<div style="height:95%;width:90%;overflow:auto;border:6px solid rgba(117, 74, 74, 0.558);padding:2%">
+		<br><div id="infopath">ikx</div><br>
 
 		<a href="home.html"><img src="images/oc-img/l-about.png" />Home</a>
 		<a href="about.html"><img src="images/oc-img/l-about.png" />About</a>
