--- a/music.html
+++ b/music.html
@@ -14,13 +14,12 @@
 	
 	
 	<body>
-    <iframe width="100%" height="550px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/755601819&color=%235c747c&auto_play=true&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    <iframe width="100%" height="550px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%253A%252F%252Fsoundcloud.com%252Fangrybirdvevo%252F&color=%235c747c&auto_play=true&hide_related=false&show_comments=true&show_user=false&show_reposts=false&show_teaser=true&visual=true"></iframe>
     <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-      <a href="https://soundcloud.com/dabootlegboy" title="the bootleg boy" target="_blank" style="color: #cccccc; text-decoration: none;">
+      <a href="" title="" target="_blank" style="color: #cccccc; text-decoration: none;">
       </a>
        · 
-      <a href="https://soundcloud.com/dabootlegboy/sets/its-4am-and-i-still-miss-you" title="its 4am and i still miss you" target="_blank" style="color: #cccccc; text-decoration: none;">
-        
+      <a href="" title="" target="_blank" style="color: #cccccc; text-decoration: none;">
       </a>
   </div>
 	</body>
