--- a/layer.html
+++ b/layer.html
@@ -32,7 +32,7 @@
 	
 	<body>
 	
-		<div class="dLink"><button class="button" ondblclick="window.location.href = 'layers/my-story.html' + '?id=' + frameId">
+		<div class="dLink"><button class="button" onclick="window.location.href = 'layers/my-story.html' + '?id=' + frameId">
 			<div class="dIcon dIcon-OFold"></div>
 			कहानी
 		</button></div>
