--- a/layers/mystory/me.html
+++ b/layers/mystory/me.html
@@ -8,7 +8,6 @@
 
 		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 		<style> 
-			body {background-color: #fcc5ea ; color: black;} 
 			button {
 				font-family:'Courier';
 				font-weight:normal;
@@ -31,7 +30,7 @@
 			$(document).ready(() => {
 				const urlParams = new URLSearchParams(window.location.search);
 				frameId = urlParams.get('id');
-				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/nikhil/layer/story/me.txt');
+				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/निखिल/me.txt');
 			});
 			audioStoryPlay(0);
 		</script>
@@ -45,14 +44,14 @@
 		<br>
 		
 		<h1>My story</h1>
-		<h2>
-		  Some things should be told, some things are not.<br>
-		  How can I tell my story without referring my past or my present? I don't think there's a way to it. But somehow I'm here to tell you what is me and what is my feelings. <br>
-		  I'll be short in words but how can I do this if there's no words left to say from me. I'm downed... again. And how should I do things with this mind? <br>
-		  The world around me is so disturbing and I don't know what should I do to prevent this to happen. I lost lot of what I had before. I lost myself. I lost sense of happiness... Or not? I'm happy but I'm not and it's the biggest confusion for me. Most of the day a happy face but in the night I'm drowning in depth of sadness. There's no way to cope with it. There's no left behind. I need to bury my way back. I should left what I had before. I should go my way. If it's here or anywhere. <br>
-		  But also I should left behind what I loved. Can I? <br>
+		<div class="dLink"><button>
+			Some things should be told, <br> some things are not<br><br>
+		  How can I tell my story <br> without referring <br> my past or my present? <br><br> I don't think there's a way to it <br> <br> But somehow I'm here to tell you <br> <br>what is me <br><br>
+		  I'll be short in words <br><br> but how can I do this <br><br> if there's no words left <br> to say from me <br><br>I'm downed...  again<br><br> And how should I do things <br> with this mind? <br><br>
+		  The world around me <br> is so disturbing <br><br> and I don't know <br> what should I do <br> to prevent this to happen <br><br> I lost lot of what I had before <br><br> I lost myself, <br>sense of happiness... <br> Or not? <br><br> I'm happy but I'm not <br> and it's the <br> biggest confusion for me <br><br> Most of the day a happy face <br> but in the night <br> <br>I'm drowning in depth of sadness <br><br>There's no way to cope with it<br> There's no left behind <br><br>I need to bury my way back <br><br>I should left what I had before <br>I should go my way<br><br> If it's here or anywhere <br>
+		  But also I should <br> left behind <br><br> what I loved <br> Can I? <br>
 		  Can<br>I?
-		</h2>
+		</button></div>
 		
 	</body>
 </html>
