--- a/layers/mystory/nothing.html
+++ b/layers/mystory/nothing.html
@@ -8,7 +8,6 @@
 
 		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 		<style> 
-			body {background-color: #fcc5ea ; color: black;} 
 			button {
 				font-family:'Courier';
 				font-weight:normal;
@@ -31,7 +30,7 @@
 			$(document).ready(() => {
 				const urlParams = new URLSearchParams(window.location.search);
 				frameId = urlParams.get('id');
-				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/nikhil/layer/story/me.txt');
+				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/निखिल/nothing.txt');
 			});
 			audioStoryPlay(0);
 		</script>
@@ -45,11 +44,14 @@
 		<br>
 		
 		<h1>NOTHING HAPPENS</h1>
-		<h2>
+		<div class="dLink"><button>
+
 			<br><br>I WILL BE THE SAME PERSON<br>AS I AM<br><br>THE SAME PLACE<br>AS ALWAYS<br><br>THE SAME TIME<br>AS ALWAYS<br><br>FOR REASONS UNKNOWN<br><br>FOR THE REASON THAT<br>NOTHING WILL CHANGE<br><br>I WILL NOT THINK <br>ANYTHING BAD ABOUT THEM <br><br>I WILL MAKE THEM <br> LAUGH AND HAPPY<br><br>
 				I WILL COME BACK <br>AFTER HELPING THE PERSON <br><br>WHO ONCE HURT ME A LOT <br><br>AND I THOUGHT TO <br>NEVER EVER GONNA TALK TO THAT PERSON AGAIN <br><br>FOR THE REASONS UNKNOWN <br><br> FOR THE REASON THAT <br>NOTHING WILL CHANGE <br><br>
 				THEY WILL KNOW NOTHING <br> I WILL NOT TELL THEM <br> ABOUT THAT BLOWS I RECIEVED <br><br>AND ALWAYS GIVE THEM <br>A PLEASANT SMILE <br><br>
-				I WILL BE THE SAME PERSON <br>AS I AM <br> THE SAME PLACE <br>AS ALWAYS <br><br>THE SAME TIME <br>AS ALWAYS <br><br>FOR REASONS UNKNOWN <br><br>FOR THE REASON THAT <br>NOTHING WILL CHANGE	<br><br><br><br>	</h2>
+				I WILL BE THE SAME PERSON <br>AS I AM <br> THE SAME PLACE <br>AS ALWAYS <br><br>THE SAME TIME <br>AS ALWAYS <br><br>FOR REASONS UNKNOWN <br><br>FOR THE REASON THAT <br>NOTHING WILL CHANGE	<br><br><br><br>
 		
+			</button></div>
+
 	</body>
 </html>
