--- a/layers/mystory/now.html
+++ b/layers/mystory/now.html
@@ -8,7 +8,6 @@
 
 		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 		<style> 
-			body {background-color: #fcc5ea ; color: black;} 
 			button {
 				font-family:'Courier';
 				font-weight:normal;
@@ -30,7 +29,7 @@
 			$(document).ready(() => {
 				const urlParams = new URLSearchParams(window.location.search);
 				frameId = urlParams.get('id');
-				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/nikhil/layer/story/now.txt');
+				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/निखिल/now.txt');
 			});
 			audioStoryPlay(0);
 		</script>
@@ -42,14 +41,14 @@
 		</div>
 		<br>
 		<h1>Happiness</h1>
-		<h2>
-			I was thinking about things like happiness, sadness and what things was.<br>
-			There are plenty of that I can't reach right now. How can I manage or sort my thoughts when they're almost dead now?. I think I started to feel good but... I'm not.<br>
-			Well, here's the deal. How can I be happy with myself?<br>
-			There's no way I can now...<br>
-			Going back to dark feelings now is different then it was before. Now I'm different and it defines my soul and my mind. But I don't want to go back. I don't want to go back anymore... I DON'T WANT TO LIVE LIKE THAT. . .<br>
-			How should I live?
-		</h2>
+		<div class="dLink"><button>
+			I was thinking about things <br> like happiness, sadness <br> and what things was<br><br>
+			There are plenty of that <br>I can't reach right now <br><br> How can I manage or sort <br> my thoughts when they're almost dead now? <br><br> I think I started to feel good <br> but... I'm not <br> <br>
+			Well, here's the deal <br> How can I be happy with myself?<br><br>
+			There's no way I can now...<br><br>
+			Going back to dark feelings now <br> is different then <br>it was before<br><br>  Now I'm different <br> and it defines my soul and my mind <br><br> But I don't want to go back<br> I don't want to go back anymore... <br><br>I DON'T WANT TO LIVE LIKE THAT. . .<br><br>
+			How should I live?<br><br><br>
+		</button></div>
 		
 	</body>
 </html>
