--- a/layers/mystory/other.html
+++ b/layers/mystory/other.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=0.4">
-		<title> [  ] </title>
-		<link rel="icon" href="../../images/logo.gif">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=0.4">
+	<title> [ ] </title>
+	<link rel="icon" href="../../images/logo.gif">
 
 		<link rel="stylesheet" type="text/css" href="../../css/main.css">
 		<style> 
-			body {background-color: #fcc5ea ; color: black;} 
 			button {
 				font-family:'Courier';
 				font-weight:normal;
@@ -20,36 +20,38 @@
 			} 
 			button:hover {color: #ce73ce; cursor:help;}
 		</style>
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="../../js/audio.js"></script>
-		<script src="../../js/cookies.js"></script>
-		<script src="../../js/themes.js"></script>
-		<script>
-			getCurrentTheme();
-			let frameId = 0;
-			$(document).ready(() => {
-				const urlParams = new URLSearchParams(window.location.search);
-				frameId = urlParams.get('id');
-				$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/nikhil/layer/story/me.txt');
-			});
-			audioStoryPlay(0);
-		</script>
-	</head>	
-	
-	<body onunload='audioStoryStopAll();'>
-		
-		<div id="backbut">
-			<button class="button" onclick="window.location.href = '../my-story.html' + '?id=' + frameId"> Go Back </button>
-		</div>
-		<br>
-		
-		<h1>Others</h1>
-		<h2>
-		  There is certain freeing <br>in wishing the best for others, <br> even someone who has wronged <br>you in past.<br><br>
-		  Maybe even epecially, <br>because doing so breaks <br> the cycle of intentionally <br>trying to hurt one another 
-		
-		</h2>
-		
-	</body>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="../../js/audio.js"></script>
+	<script src="../../js/cookies.js"></script>
+	<script src="../../js/themes.js"></script>
+	<script>
+		getCurrentTheme();
+		let frameId = 0;
+		$(document).ready(() => {
+			const urlParams = new URLSearchParams(window.location.search);
+			frameId = urlParams.get('id');
+			$(`#win-id-${frameId} .win-text`, window.parent.document).html('[new-home@web ~]$ /home/निखिल/other.txt');
+		});
+		audioStoryPlay(0);
+	</script>
+</head>
+
+<body onunload='audioStoryStopAll();'>
+
+	<div id="backbut">
+		<button class="button" onclick="window.location.href = '../my-story.html' + '?id=' + frameId"> Go Back </button>
+	</div>
+	<br>
+
+	<h1>Others</h1>
+	<div class="dLink"><button>
+		There is certain freeing <br>in wishing the best for others, <br> even someone who has wronged <br>you in
+		past<br><br>
+		Maybe even epecially, <br>because doing so breaks <br> the cycle of intentionally <br>trying to hurt one
+		another
+	</button></div>
+
+</body>
+
 </html>
