--- a/mobile.html
+++ b/mobile.html
@@ -16,7 +16,8 @@
 			
 			body {
 				font: normal 18px 'Kosugi'; 
-				height: calc(80vh);
+				height: calc(95vh);
+				width: calc(55vh);
 			}
 			#scanlines {
 				background-image: url("images/scanlines.png");
@@ -33,10 +34,10 @@
 			}
 			a {
 				background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 25%, rgb(255, 255, 255) 50%, rgb(255, 255, 255) 75%, rgba(255, 255, 255, 0.455) 100%);
-				width: 60%;
+				width: 20%;
 				margin: 15px 0;
 				clear: both;
-				border:2px solid rgb(57, 54, 65);
+				border:4px solid rgba(252, 1, 1, 0.315);
 				box-sizing: border-box;
 				display: inline-table;
 				text-align: right;
@@ -47,8 +48,8 @@
 	</head>
 	
 	<body> <br><br>
-		<div style="height:95%;width:90%;overflow:auto;border:6px solid rgba(117, 74, 74, 0.558);padding:2%">
-		<br><div id="infopath">ikx</div><br>
+		<div style="height:95%;width:90%;overflow:auto;border:19px solid rgba(252, 1, 1, 0.076);padding:2%">
+		<br><div id="infopath" style="color:blue">ikx</div><br>
 
 		<a href="home.html"><img src="images/oc-img/l-about.png" />Home</a>
 		<a href="about.html"><img src="images/oc-img/l-about.png" />About</a>
@@ -59,7 +60,7 @@
 		<a href="mailto:econnikhil@protonmail.com"><img src="images/oc-img/l-mail.png" />Mail</a>
 		<!-- <a href="https://discord.gg/GRXzQyX"><img src="images/oc-img/l-discor.png" />Talk</a> -->
 
-		<a href="layer.html"><img src="images/oc-img/l-layers.png" />Layer</a>
+		<a href="layers/my-story.html"><img src="images/oc-img/l-layers.png" />Layer</a>
 		<!-- <a href="knowledge.html"><img src="images/oc-img/l-know.png" />Know</a> -->
 		</div>
 	</body>
