--- a/mobile.html
+++ b/mobile.html
@@ -15,9 +15,10 @@
 
 			
 			body {
-				font: normal 18px 'Kosugi'; 
-				height: calc(95vh);
-				width: calc(55vh);
+				font: normal 28px 'Kosugi'; 
+				background-image: url("images/backgrounds/ocback1.gif");
+				height: calc(85vh);
+				width: calc(35vh);
 			}
 			#scanlines {
 				background-image: url("images/scanlines.png");
@@ -33,23 +34,24 @@
 				100% {background-position: 0px 8px;}
 			}
 			a {
-				background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 25%, rgb(255, 255, 255) 50%, rgb(255, 255, 255) 75%, rgba(255, 255, 255, 0.455) 100%);
-				width: 20%;
+				color :#7636657f;
+				text-shadow: -2px 0 #ffffffcb;
+				height: 15%;
+				width: 40%;
 				margin: 15px 0;
 				clear: both;
-				border:4px solid rgba(252, 1, 1, 0.315);
+				border: 4px solid rgba(255, 255, 255, 0.273);
 				box-sizing: border-box;
 				display: inline-table;
-				text-align: right;
+				text-align: center;
 			}
-			a img {float: left;}
+			a img {float: center;}
 		</style>
 
 	</head>
 	
 	<body> <br><br>
-		<div style="height:95%;width:90%;overflow:auto;border:19px solid rgba(252, 1, 1, 0.076);padding:2%">
-		<br><div id="infopath" style="color:blue">ikx</div><br>
+		<div style="height:95%;width:90%;overflow:auto;border:4px solid rgba(190, 130, 187, 0.625);padding:2%">
 
 		<a href="home.html"><img src="images/oc-img/l-about.png" />Home</a>
 		<a href="about.html"><img src="images/oc-img/l-about.png" />About</a>
