--- a/home.html
+++ b/home.html
@@ -18,27 +18,27 @@
 	</head>
 	
 	<body>
-		<br><br>
-		<div class="myimage">
-			<img src="images/myself.png" style="width:400px"/>
-		</div>
-
-		<div class="block">
 			<a href=""><h1 class="glowtext">
 				निखिल
 			</h1></a>
+			
+		<div class="myimage">
+			<img src="images/myself.png" style="width:350px"/>
+		</div>
+
+		<div class="block">
 			
 			<hr><h3>
 				Hi! My name is Nikhil (aka ikx) <br> <br>this is my personal space on the web </h1>			
 			</h3><hr>
 			<h3>
-				How are you?
-		</div>
+				How are you?<br><br>
 		
-				<embed src="https://www5.cbox.ws/box/?boxid=931408&boxtag=Ag57qL" style="width:400px; height: 50px; border: 1px solid white; box-shadow: 0 0 5px black;"/>
-		<div class="block">
+		
+				<embed src="https://www5.cbox.ws/box/?boxid=931408&boxtag=Ag57qL" style="width:300px; height: 50px; border: 1px solid white; box-shadow: 0 0 5px black;"/>
+		
 
-				 it's nice to meet you all <br><br> Thank you all who leaved comments or loved my site. <br> <br>We will meet again, in the world with no sadness
+				<br><br> it's nice to meet you <hr> <br>Thank you all who leaved comments or loved my site. <br> <br>We will meet again, in the world with no sadness
 			</h3><hr>
 	
 		</div>		
