--- a/about.html
+++ b/about.html
@@ -21,29 +21,26 @@
 
 		<div class="block">
 			
-			<hr><h3>Let me introduce myself properly... <br>
-			I love FOSS (Free and Open Source Software), I like music, and I like talking to other people.</h3><hr>
-			<hr><h3>I'm an explorer, I like to explore different minds(ets) and looking at things from the perspective of others.</h3><hr>
+			<hr><h3>Let me introduce myself properly... <br><hr>
+			I love FOSS (Free and Open Source Software), I like music, and I like talking to other people
+			<h3>I'm an explorer, I like to explore different minds(ets) and looking at things from the perspective of others</h3><hr>
 			<hr><h3>I strive to be different, I've always wanted to be special, different from others, sticking out from the masses.</h3><hr>
 	
 		</div>		
 		<div class="divider"></div>
 
-			<div class="box">
-				<div class="toper">
-					<h2>So, what's next?</h2>
-				</div>
+		<div class="block">
+			<hr><h2>So, what's next?</h2><hr>
 				<div class="text">
 					<h3>I was thinking about my website and it seemed to be not that good as I wanted it to be.</h3>
 					<h3>Actually as much as I tried to make it dark and minimal'ish, I couldn't do it. It's not my now. I grew up a lot, since I started to develop this web-site, and now I realised that it's not what my heart wants to see.</h3>
-					<br>
-					<h3>I love lot of crazy stuff and also lots of dark memes and sysadmin stuff.<br>But now I understand that I'm not that stuff. I love it but it not defines me.</h3>
+					<hr><hr><h3>I love lot of crazy stuff and also lots of dark memes and sysadmin stuff.<hr>But now I understand that I'm not that stuff. I love it but it not defines me.</h3>
 					<h3>So it was a bit hard decision which I made. I will redisign my site to, what I think, will be best for me. But more importantly to my heart.</h3>
 					<h3>I will keep that dark story which I'm creating but it'll be not main content as it was to the present day.</h3>
 					<br>
-					<h3>Once again... Thank you all who leaved comments or loved my site. We will meet again, in the world with no sadness.</h3>
-					<br>
-					<h3><a href="index.html">Go back</a></h3>
+					<hr><h3>Once again... Thank you... We will meet again...</h3><hr><hr>
+
+					<h3><a href="index.html">Go back</a></h3><hr>
 				</div>
 			</div>
 			
