--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 	
 	<body>
 	
-<!--
 		<div id="loader">
 			<h1 class="glitch" data-text="Nikhil">ikx</h1>
 			<h2 class="glitch" data-text="time waits for noone">time waits for noone</h2>
@@ -54,9 +53,9 @@
 			setTimeout(() => {
 				$('#loader').hide();
 				document.getElementById("snd-loaded").play();
-			}, 1000 * 6);
+			}, 1000 * 2);
 			
-		</script> -->
+		</script>
 
 		<div id="scanlines"></div>
 		
@@ -99,9 +98,9 @@
 					Layer
 				</button></div>
 				
-				<div class="dLink"><button class="button" onclick="deployWindow('meme.html', 'meme', '[new-home@web ~]$ /home/निखिल/meme/')">
+				<div class="dLink"><button class="button" onclick="deployWindow('stories.html', 'Stories', '[new-home@web ~]$ /home/निखिल/stories/')">
 					<div class="dIcon dIcon-Meme"></div>
-					Meme
+					Stories
 				</button></div>
 
 
